# Game

./: CMakeLists.txt  README.md
include/: Entity.h  Objects.h  library.h  render.h
include/Entities/:  Enemy.h  Bullet.h  Enemy.h  Entity.h  Player.h
src/: Objects.cpp  Remder.cpp  main.cpp
src/Entities/: Bullet.cpp  Enemy.cpp  Player.cpp
